Fix overlay achievements search padding. Fix notes expander button not hiding. Allow full-screen pagelist entries on small notes window to use full width. Fix browser tab text alignment.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -40744,7 +40744,7 @@ span[title="Unfold line"]::after {
   font-size: var(--zehn-size-14) !important;
   line-height: var(--zehn-size-titlebar) !important;
   width: auto !important;
-  flex-shrink: 1 !important;
+  flex: 1 !important;
   min-width: 0 !important;
 }
 
@@ -43632,9 +43632,9 @@ span[title="Unfold line"]::after {
 }
 
 .PopupFullWindow.GameNotes .DialogContent_InnerWidth:not(._3Sf_ShCtdfWp5P04k2cIgp) {
-  /*padding: 32px 0 0 0 !important;*/
-  padding: 0 !important;
-  margin: 32px 0 0 0 !important;
+  padding: var(--zehn-size-titlebar) 0 0 0 !important;
+  margin: 0 !important;
+  box-sizing: border-box !important;
 }
 
 /* NARROW WINDOW PAGELIST */
@@ -43698,6 +43698,11 @@ span[title="Unfold line"]::after {
   -webkit-mask-image: var(--zehn-icon-add-list) !important;
 }
 
+@media screen and (max-width: 500px) {
+  ._3LLH_F43MTu6UtG4Z3kudv {
+    display: none !important;
+  }
+}
 ._3LLH_F43MTu6UtG4Z3kudv svg[direction=left] {
   -webkit-mask-image: var(--zehn-icon-chevron-left) !important;
 }
@@ -43801,6 +43806,10 @@ p._3lnqGBzYap-Z2T81XBiBUU {
 ._1AL7l2CN6z-vuLfp1iCLa ._1fu6xumTI1nCY5wc6FG_N2 > div {
   flex-grow: 1 !important;
   display: flex !important;
+}
+
+._3Sf_ShCtdfWp5P04k2cIgp ._18QCu-7MTzd51UpVbYysDy ._1-vlriAtKYDViAEunue4VO {
+  max-width: 100% !important;
 }
 
 /* PAGELIST ICON */
@@ -57717,10 +57726,6 @@ div:not(.ActiveVoiceChannel) > .chatRoomVoiceChannelNameContainer:active {
 }
 
 /* SEARCH */
-._2HS5QwHZM9rkt-lx6YWlBF {
-  padding: 0 var(--zehn-size-padding-md) !important;
-}
-
 ._2HS5QwHZM9rkt-lx6YWlBF ._1MqIGcIt2RcNHgT09vMWTj {
   min-width: 0 !important;
   flex-shrink: 1 !important;
@@ -57832,6 +57837,7 @@ div:not(.ActiveVoiceChannel) > .chatRoomVoiceChannelNameContainer:active {
   display: flex !important;
   flex-wrap: nowrap !important;
   white-space: nowrap !important;
+  padding: 0 !important;
 }
 
 .OAV6QqJuXaBPRBW9RaPA6 {
